# c_game_project

./: CMakeLists.txt  Doxyfile  README.md
doc/: a.txt
include/: db.h  display_snake.h  display_tetris.h  game.h  main.h  result.h  tetrisV01.h  update.h  utility.h
src/: db.c  display_menu.c  display_snake.c  display_tetris.c  game.c  getch.c  main.c  new.c  play_background.c  result.c  tetrisV01.c  update.c  utility.c
temp/: ending.c  helpme.c
vscode/: launch.json
